Closed
Bug 1313246
Opened 9 years ago
Closed 9 years ago
Empty username and/or credential in RTCPeerConnection constructor throw when they shouldn't
Categories
(Core :: WebRTC, defect, P1)
Core
WebRTC
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: jib, Assigned: jib)
Details
Attachments
(1 file)
STR:
1. In web console, type:
> new RTCPeerConnection({ iceServers: [{ urls: "turn:turn.example.org", username: "", credential: "" }] })
Expected result (according to spec [1]):
> RTCPeerConnection { }
Actual result:
> InvalidAccessError: RTCPeerConnection constructor passed invalid RTCConfiguration - missing username: turn:turn.example.org
This must be fixed to pass web platform tests. [2]
[1] https://github.com/w3c/webrtc-pc/issues/885
[2] https://github.com/w3c/web-platform-tests/pull/4071
| Comment hidden (mozreview-request) |
Comment 2•9 years ago
|
||
Comment on attachment 8804948 [details]
Bug 1313246 - allow empty username and credential in RTCPeerConnection constructor.
Redirecting to Byron
Attachment #8804948 -
Flags: review?(ekr) → review?(docfaraday)
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8804948 [details]
Bug 1313246 - allow empty username and credential in RTCPeerConnection constructor.
https://reviewboard.mozilla.org/r/88758/#review88096
Attachment #8804948 -
Flags: review?(docfaraday) → review+
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b9851671ac00
allow empty username and credential in RTCPeerConnection constructor. r=bwc
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•