Bug 1313246 - allow empty username and credential in RTCPeerConnection constructor. r=bwc

MozReview-Commit-ID: 6EJ46BXxXW5

--HG--
extra : rebase_source : e9a5ddc25c61708371ce1c89d172dda432226b25